# Algorithms

./: .gitignore  Algorithms (ToDo).txt  CMakeLists.txt  README.md  Todo.txt
Arrays/: ArraysAlgorithms.h  CMakeLists.txt  FixedPointSmallestIndexValueEqualIndex.cpp  MidPoint.cpp  Reverse_Bits.cpp  Two_Sum_Less_Than_K.cpp  common.h  main.cpp  other.cpp
Arrays/algorithms/: Add_Digits.cpp  Add_One_to_Integer_Array.cpp  Best_Time_Buy_and_Sell_Stock.cpp  Calculate_Max_Hotel_Visitors.cpp  Can_Jump.cpp  Coins_Change_Problem.cpp  Construct_the_Rectangle.cpp  Container_With_Most_Water.cpp  Contains_Duplicate.cpp  Contains_Nearby_Duplicates.cpp  Count_Distinct_Pairs_With_Difference_K.cpp  Delete_Each_Second_Value_in_Array.cpp  Divide_With_Division_Operator.cpp  Divide_Without_Division_Operator.cpp  Find_Element_Encountered_Only_Once.cpp  Find_First_Element_Occured_Odd_Times.cpp  Find_First_Repeating_Element.cpp  Find_First_and_Last_Position_of_Element_Sorter_Arrays.cpp  Find_Index_In_Array_to_make_Right_Equal_Left.cpp  Find_Longest_Increasing_Subsequence.cpp  Find_Longest_SubArray_K_Unique_Elements.cpp  Find_Missing_K_Number_Sorted_Array.cpp  Find_Missing_K_Number_Unsorted.cpp  Find_Missing_K_Positive_Number_Sorted_Array.cpp  Find_Missing_Number.cpp  Find_Missing_Number_2.cpp  Find_Missing_Number_Any_Range.cpp  Find_Missing_Number_Sorted_Array.cpp  Find_Multiplier_Pair.cpp  Find_N_Max_Elements.cpp  Find_N_Min_Elements.cpp  Find_Pair_Sum_Equal_K.cpp  Find_Pair_Sum_Equal_K_Sorted_Array.cpp  Find_Pair_with_Maximum_Sum.cpp  Find_Peak_Element.cpp  Find_Rank.cpp  Find_Repeated_and_Missing_Numbers.cpp  Find_Smallest_Missing_Positive_Number.cpp  Find_Smallest_Without_Compare.cpp  Find_SubArray_Sum_Equal_K_Single.cpp  (+56 more)
BinarySearch/: BinarySearchAlgorithms.h  CMakeLists.txt  common.h  main.cpp
BinarySearch/algorithms/: Binary_Search.cpp  Find_Smallest_Letter_Greater_Than_Target.cpp
Graphs/: CMakeLists.txt  GraphsAlgorithms.h  Other.cpp  common.h  main.cpp
Graphs/algorithms/: BFS.cpp  DFS.cpp  DFS_NonRecur.cpp  Detect_Cycle.cpp  Detect_Cycle_2.cpp  Find_Shortest_Path.cpp  Find_Shortest_Path_1.cpp  Find_Shortest_Path_Dijkstra.cpp  Other.cpp
Heaps/: CMakeLists.txt  HeapsAlgorithms.h  common.h  main.cpp
Heaps/algorithms/: Is_MaxHeap_Test.cpp  Other.cpp
LinkedList/: CMakeLists.txt  LinkedListAlgorithms.h  common.h  main.cpp
LinkedList/algorithms/: Add_Two_Numbers.cpp  Check_If_Palindrome.cpp  Check_List_Is_Cycled.cpp  Delete_Duplicates.cpp  Delete_Duplicates_SortedList.cpp  Delete_K_Element_From_the_End.cpp  Delete_Node_By_Position.cpp  Delete_Nodes_By_Value.cpp  Find_Middle_Element.cpp  Find_Nth_Element_FromTheEnd.cpp  Get_Length.cpp  Insert_Into_Sorted_List.cpp  Merge_K_Sorter_Lists.cpp  Merge_Two_Lists.cpp  Move_All_Occurrences_To_The_End.cpp  Other.cpp  Remove_N_Node_From_End.cpp  Reverse_List.cpp
Queues/: CMakeLists.txt  QueuesAlgorithms.h  common.h  main.cpp
Queues/algorithms/: Other.cpp  Queue_Using_Stacks.cpp  Queue_Using_Stacks_Recursive.cpp
Stack/: CMakeLists.txt  StackAlgorithms.h  common.h  main.cpp
Stack/algorithms/: MinStack.cpp  Other.cpp  Stack_Using_One_Queue.cpp  Stack_Using_Two_Queues.cpp
Strings/: CMakeLists.txt  Other.cpp  Remove_Adjacent_Duplicates.cpp  StringAlgorithms.h  common.h  main.cpp
Strings/algorithms/: Are_Anagrams.cpp  Calc_Parentheses_3_Bracket.cpp  Calc_Parentheses_K_Deletions_Make_Valid.cpp  Check_If_Strings_Rotate_Rotate_Equals.cpp  Check_If_Strings_Rotate_Rotate_Equals_2.cpp  Check_If_Two_Strings_Are_Permutation.cpp  Check_Valid_Parentheses_1_Bracket.cpp  Check_Valid_Parentheses_3_Bracket.cpp  Compress_String.cpp  Count_Anagrams.cpp  Destination_City.cpp  Find_All_Anagrams_in_String.cpp  Find_Common_Characters.cpp  Find_Common_Prefix_And_Postfix.cpp  Find_Duplicate_Symbols.cpp  Find_First_Char_Encountered_Once.cpp  Find_First_K_Chars_Encountered_Once.cpp  Find_If_String_IsSubstring_OfAnother.cpp  Find_K_Most_Frequent_Character.cpp  Find_Last_Not_Of.cpp  Find_Longest_Substring_With_K_Distinct_Characters.cpp  Find_Longest_Word.cpp  Get_String_Length.cpp  Int_To_Roman.cpp  Intersperse_String.cpp  Is_Palindrome.cpp  Is_Palindrome_Ignore_Invalid_Chars.cpp  Is_String_Contains_Another_String.cpp  Is_String_Has_Only_Unique_Characters.cpp  Is_Words_Can_Be_Formed_by_Characters.cpp  Jewels_and_Stones.cpp  Letter_Case_Permutation.cpp  Longest_Common_Prefix.cpp  Longest_Palindrome.cpp  Longest_Substring_With_K_Distinct_Characters.cpp  Longest_Substring_With_Maximum_K_Unique_Characters.cpp  Longest_Substring_Without_Repeating_Characters.cpp  Longest_Substring_Without_Repeating_Characters_2.cpp  Longest_Word.cpp  Maximum_Consecutive_Characters_SubString.cpp  (+25 more)
Trees/: CMakeLists.txt  TreesAlgorithms.h  common.h  main.cpp
Trees/algorithms/: Backwards_Tree_Traversal.cpp  Check_Is_Binary_Search_Tree_BST.cpp  Check_Is_Tree_Balanced.cpp  Check_Is_Tree_Complete.cpp  Check_Is_Tree_Symmetric.cpp  Check_Is_Trees_Identical.cpp  Count_Elements.cpp  Find_Deepest_Node.cpp  Find_Element_Parent.cpp  Find_If_Last_Level_Completed.cpp  Find_Level_With_Maximum_Sum.cpp  Find_Lowest_Common_Ancestor.cpp  Find_Maximum_Level_Sum.cpp  Find_Maximum_Node_At_Given_Level.cpp  Find_Min_and_Max_Element_NonRecursive.cpp  Find_Min_and_Max_Element_Recursive.cpp  Find_N_th_MinElement.cpp  Find_N_th_Smallest_Element.cpp  Find_Path_Sum_Between_Two_Nodes.cpp  Find_Search_Element_in_BST.cpp  Get_Tree_Depth.cpp  Get_Tree_Min_Depth.cpp  Inorder_Tree_Traversal.cpp  Largest_Element_In_Each_Level.cpp  Level_Order_Traversal.cpp  Other.cpp  Print_Left_View.cpp  Print_Right_View.cpp  Print_Top_View.cpp  Print_Tree_Pretty.cpp  Sorted_Array_To_Binary_Tree.cpp  Sorted_Array_To_Binary_Tree_NonRecursive.cpp  Tree_Traversal_Backward.cpp  Tree_Traversal_Inorder.cpp  Tree_Traversal_Level_Order.cpp  Tree_Traversal_PostOrder.cpp  Tree_Traversal_PreOrder.cpp
Utilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h  Utilities.cpp  Utilities.h
